--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
 		<button id="search-by-title-reset" type="reset" class="btn-sm">Reset</button>
 	</div>
 	<div id="consola"></div>
+
+
+	<!-- accediendo con google -->
+	<button id="btnGoogle" type="button" class="btn-sm btn-primary">Accediendo con Google</button>
 	<!-- agregando firebase -->
 	<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js"></script>
 	<script src="vendors/jquery/jquery-3.2.1.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
